--- a/util-linux/static-compat/PKGBUILD
+++ b/util-linux/static-compat/PKGBUILD
@@ -4,20 +4,29 @@
 
 _pkgname=util-linux
 pkgname=static-compat-$_pkgname
-_pkgmajor=2.38
-_realver=${_pkgmajor}.1
-pkgver=${_realver/-/}
+_tag='2.40'
+pkgver="${_tag/-/}"
 pkgrel=1
 pkgdesc='Miscellaneous system utilities for Linux'
 url='https://github.com/karelzak/util-linux'
 arch=('x86_64')
 depends=('glibc-static-compat')
 makedepends=('systemd' 'python' 'libcap-ng' 'libxcrypt' 'static-compat-configure')
-license=('GPL2')
+license=(
+  'BSD-2-Clause'
+  'BSD-3-Clause'
+  'BSD-4-Clause-UC'
+  'GPL-2.0-only'
+  'GPL-2.0-or-later'
+  'GPL-3.0-or-later'
+  'ISC'
+  'LGPL-2.1-or-later'
+  'LicenseRef-PublicDomain'
+)
 options=(!emptydirs staticlibs strip)
 validpgpkeys=('B0C64D14301CC6EFAEDF60E4E4B71D5EEC39C284')  # Karel Zak
 options=(staticlibs)
-source=("https://www.kernel.org/pub/linux/utils/util-linux/v${_pkgmajor}/${_pkgname}-${_realver}.tar."{xz,sign})
+source=("https://www.kernel.org/pub/linux/utils/util-linux/v${_tag}/${_pkgname}-${_tag}.tar."{xz,sign})
 sha256sums=('60492a19b44e6cf9a3ddff68325b333b8b52b6c59ce3ebd6a0ecaa4c5117e84f'
             'SKIP')
 
